# laminar-boundary-builder

./: .gitignore  LICENSE  README.md  build_macos.sh  launch_gui.py  pyproject.toml  requirements.txt  run.py
assets/: app.icns
demo_input/: demo_manual_landmarks.csv  demo_mask.nrrd
laminar_boundary_builder/: __init__.py  app.py  cli.py  core.py  gl_view.py
laminar_boundary_builder/data/masks/: ENT_official_structure_909_10um_mask.nrrd
